# shanks-university

./: .gitignore  CMakeLists.txt  Dockerfile  Epsilon V2.docx  README.md  Weniger.DOCX  Wynn’s rho algorithm.docx  d^(m)-трансформация.docx  desktop.ini  install_py_requirement.bat  install_pyshanks_windows.bat  main.cpp  test.py  Алгоритм Левина.docx  Винн.docx  Левин-Сиди.docx  Любкин W.docx  Метод экстраполяции Ричардсона.docx  Новости.txt  Ряды.docx  ТЕОРИЯ_ОБЩАЯ.docx  Тета-Брезински.docx  Форд-Сиди.docx  Экстраполяция_Ричардсона_Дополнение (2).docx  эпсилон-алгоритм v3.docx
apps/: .env  (+1 more)
shanks_consumer/: Launcher.bat  README.md  example.csv  example.json  install_pyshanks.sh  main.py  output.csv  output.json  pyproject.toml  requirements.txt
shanks_consumer/data/: example.json  example_series.csv  one_series_all_algo.json
shanks_consumer/output/: events.csv  events.json  output.csv  output.json
shanks_consumer/pyshanks/: __init__.py  pyshanks.pyi
shanks_consumer/src/: events.py  export.py  params.py  plot.py  trial.py
shanks_consumer/src/shanks_consumer/: export.py  params.py  trial.py
shanks_transformation/: .gitignore  CMakeLists.txt  FSA.h  FSA.hpp  FSA2.hpp  FSA3.hpp  FSA_3.h  FSA_two.h  bindings.cpp  brezinski_theta_algorithm.h  chang_whynn_algorithm.h  custom_concepts.hpp  drummond_D_algorithm.h  drummond_D_algorithm.hpp  epsilon_aitken_theta_algorithm.h  epsilon_algorithm.h  epsilon_algorithm.hpp  epsilon_algorithm_three.h  epsilon_algorithm_two.h  epsilon_modified_algorithm.h  epsilon_modified_algorithm.hpp  levin_L_algorithm.hpp  levin_algorithm.h  levin_recursion_algorithm.h  levin_sidi.h  levin_sidi_M_algorithm.h  levin_sidi_M_algorithm.hpp  levin_sidi_S_algorithm.h  levin_sidi_S_algorithm.hpp  lubkin_W_algorithm.h  lubkin_W_algorithm.hpp  main.cpp  methods.hpp  new_logger.py  py.cpp  rebuild.sh  remainders.h  remainders.hpp  requirements.txt  rho_wynn_algorithm.h  (+28 more)
shanks_transformation/algorithm/: FSA_3_algorithm.h  FSA_algorithm.h  FSA_two_algorithm.h  brezinski_theta_algorithm.h  brezinski_theta_algorithm.tpp  chang_whynn_algorithm.h  chang_wynn_algorithm.hpp  drummond_D_algorithm.h  drummond_d_algorithm.hpp  drummond_d_algorithm.tpp  epsilon_algorithm.h  epsilon_algorithm_three.h  epsilon_algorithm_two.h  epsilon_two_algorithm.h  ford_sidi_one_algorithm.hpp  ford_sidi_one_algorithm.tpp  ford_sidi_three_algorithm.hpp  ford_sidi_three_algorithm.tpp  levin_algorithm.h  levin_basic_algorithm.tpp  levin_recursion_algorithm.h  levin_sidi_M_algorithm.h  levin_sidi_S_algorithm.h  levin_sidi_algorithm.h  levin_sidi_basic_algorithm.hpp  levin_sidi_basic_algorithm.tpp  levin_sidi_t_algorithm.hpp  levin_sidi_t_algorithm.tpp  levin_sidi_u_algorithm.tpp  levin_sidi_v_algorithm.tpp  levin_sidi_v_recursive_algorithm.hpp  levin_sidi_v_recursive_algorithm.tpp  lubkin_W_algorithm.h  lubkin_w_algorithm.hpp  lubkin_w_algorithm.tpp  rho_wynn_algorithm.h  richardson_algorithm.h  richardson_algorithm.tpp  shanks_alternating_algorithm.tpp  shanks_basic_algorithm.hpp  (+8 more)
shanks_transformation/algorithm/brezinski_theta/: brezinski_theta_algorithm.h
shanks_transformation/build_mod/: shanks_transformation
shanks_transformation/build_un/: shanks_transformation
shanks_transformation/drummond_D/: drummond_D_algorithm.hpp  drummond_D_algorithm.tpp
shanks_transformation/levin_sidi_S/: levin_sidi_S_algorithm.hpp  levin_sidi_S_algorithm.tpp
shanks_transformation/methods/: FSA.hpp  FSA.tpp  FSA2.hpp  FSA2.tpp  FSA3.hpp  FSA3.tpp  brezinski_theta_algorithm.hpp  brezinski_theta_algorithm.tpp  chang_whynn_algorithm.hpp  chang_whynn_algorithm.tpp  custom_concepts.hpp  drummond_D_algorithm.hpp  drummond_D_algorithm.tpp  epsilon_aitken_theta_algorithm.hpp  epsilon_aitken_theta_algorithm.tpp  epsilon_algorithm.hpp  epsilon_algorithm.tpp  epsilon_algorithm2.hpp  epsilon_algorithm2.tpp  epsilon_algorithm3.hpp  epsilon_algorithm3.tpp  epsilon_modified_algorithm.hpp  epsilon_modified_algorithm.tpp  levin_L_algorithm.hpp  levin_L_algorithm.tpp  levin_sidi_M_algorithm.hpp  levin_sidi_M_algorithm.tpp  levin_sidi_S_algorithm.hpp  levin_sidi_S_algorithm.tpp  lubkin_W_algorithm.hpp  lubkin_W_algorithm.tpp  remainders.hpp  rho_wynn_algorithm.hpp  rho_wynn_algorithm.tpp  richardson_algorithm.hpp  richardson_algorithm.tpp  series_acceleration.hpp  shanks_transformation.hpp  shanks_transformation.tpp  theta_modified_algorithm.hpp  (+3 more)
shanks_transformation/modular_solution/: CMakeLists.txt  methods.hpp  test_framework.h
shanks_transformation/remainders/: d_transform.tpp  remainders.hpp  t_transform.tpp  u_transform.tpp  v_transform.tpp  v_transform_2.tpp
shanks_transformation/series/: Ci_x_series.hpp  E_x_series.hpp  Incomplete_Gamma_func_series.hpp  Ja_x_series.hpp  K_x_series.hpp  Lambert_W_func_series.hpp  Riemann_zeta_func_series.hpp  Riemann_zeta_func_xmin1_div_Riemann_zeta_func_x_series.hpp  Series_with_ln_number1_series.hpp  Series_with_ln_number2_series.hpp  Si_x_series.hpp  abs_sin_x_minus_2_div_pi_series.hpp  arcsin_x2_series.hpp  arcsin_x_minus_x_series.hpp  arcsin_x_series.hpp  arcsinh_x_series.hpp  arctan_x2_series.hpp  arctan_x3_series.hpp  arctanh_x2_series.hpp  arctg_x_series.hpp  artanh_x_series.hpp  bin_series.hpp  cos3xmin1_div_xsqare_series.hpp  cos_series.hpp  cos_sqrt_x_series.hpp  cos_x2_series.hpp  cosh_series.hpp  eighth_pi_m_one_third_series.hpp  erf_series.hpp  exp_m_cos_x_sinsin_x_series.hpp  exp_series.hpp  exp_squared_erf_series.hpp  five_pi_twelve_series.hpp  four_arctan_series.hpp  four_ln2_m_3_series.hpp  gamma_series.hpp  half_asin_two_x_series.hpp  half_minus_sinx_multi_pi_4_series.hpp  half_multi_ln_1div2multi1minuscosx_series.hpp  inverse_1mx_series.hpp  (+68 more)
shanks_transformation/src/: main.cpp  remainders.h  series.h  test_functions.h  wynn_numerators.h
shanks_transformation/tests/: CMakeLists.txt  brezinski_theta_test.cpp  service_pointer_adapter.hpp  test_framework.h  test_functions.h
shanks_transformation/united_header/: series_acceleration.hpp
shanks_transformation/united_solution/: series.h  series_acceleration.hpp  test_framework.h  test_functions.h
(+519 files in other folders)
